# docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "This is a sample swagger for Fiber",
-        "title": "Daily Social Fiber API",
+        "title": "EzyMark Fiber API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "Philip Nguyen",
@@ -10,47 +10,13 @@
         },
         "license": {
             "name": "MIT",
-            "url": "https://github.com/phongnd2802/daily-social/blob/main/LICENSE"
+            "url": "https://github.com/phongnd2802/ezy-mark/blob/main/LICENSE"
         },
         "version": "1.0"
     },
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
-        "/auth/login": {
-            "post": {
-                "description": "Authenticate user with email and password",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Authentication Management"
-                ],
-                "summary": "User Login",
-                "parameters": [
-                    {
-                        "description": "payload",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dtos.LoginRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    }
-                }
-            }
-        },
         "/auth/resend-otp": {
             "post": {
                 "description": "Resend OTP",
@@ -72,6 +38,40 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/dtos.ResendOTPReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/signin": {
+            "post": {
+                "description": "Authenticate user with email and password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication Management"
+                ],
+                "summary": "User Login",
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.LoginRequest"
                         }
                     }
                 ],
